--- a/MAU Demo/MAU Demo.xcodeproj/xcshareddata/xcschemes/MAU Demo.xcscheme
+++ b/MAU Demo/MAU Demo.xcodeproj/xcshareddata/xcschemes/MAU Demo.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "5D78A65625E859C3004AFD8A"
-               BuildableName = "TestingMAU.app"
-               BlueprintName = "TestingMAU"
-               ReferencedContainer = "container:TestingMAU.xcodeproj">
+               BlueprintIdentifier = "5DD1D27825F8007400E5FEC4"
+               BuildableName = "MAU Demo.app"
+               BlueprintName = "MAU Demo"
+               ReferencedContainer = "container:MAU Demo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -31,7 +31,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "QA"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -44,10 +44,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5D78A65625E859C3004AFD8A"
-            BuildableName = "TestingMAU.app"
-            BlueprintName = "TestingMAU"
-            ReferencedContainer = "container:TestingMAU.xcodeproj">
+            BlueprintIdentifier = "5DD1D27825F8007400E5FEC4"
+            BuildableName = "MAU Demo.app"
+            BlueprintName = "MAU Demo"
+            ReferencedContainer = "container:MAU Demo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -61,10 +61,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5D78A65625E859C3004AFD8A"
-            BuildableName = "TestingMAU.app"
-            BlueprintName = "TestingMAU"
-            ReferencedContainer = "container:TestingMAU.xcodeproj">
+            BlueprintIdentifier = "5DD1D27825F8007400E5FEC4"
+            BuildableName = "MAU Demo.app"
+            BlueprintName = "MAU Demo"
+            ReferencedContainer = "container:MAU Demo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
